--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -5,19 +5,19 @@ TERM = "xterm-256color"
 size = 13.0
 
 [font.bold]
-family = "Menlo"
+family = "FiraCode Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "Menlo"
+family = "FiraCode Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "Menlo"
+family = "FiraCode Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "Menlo"
+family = "FiraCode Nerd Font"
 style = "Regular"
 
 [window]
